--- a/html/contact.html
+++ b/html/contact.html
@@ -71,7 +71,7 @@
                 </div>
                 <div>
                   <a class="text-dark">+994 51 424 48 07</a>
-                  <a style="font-size: 12px;" class="fs-8 text-dark fw-bold">seeshark.llc@gmail.com</a>
+                  <a target="_blank"  href="https://mail.google.com/" style="font-size: 12px;" class="fs-8 text-dark fw-bold">seeshark.llc@gmail.com</a>
                 </div>
               </div>
             </ul>
@@ -179,7 +179,7 @@
           <div class="d-flex flex-column gap-8 pe-xl-5">
             <h2 class="mb-0 text-white">Build something together?</h2>
             <div class="d-flex flex-column gap-2">
-              <a target="_blank" class="link-hover hstack gap-3 text-white fs-5">
+              <a  href="https://mail.google.com/" target="_blank" class="link-hover hstack gap-3 text-white fs-5">
                 <iconify-icon icon="lucide:arrow-up-right" class="fs-7 text-primary"></iconify-icon>
                 seeshark.llc@gmail.com
               </a>
@@ -194,8 +194,8 @@
         </div>
         <div class="col-md-4 col-xl-2 mb-8 mb-xl-0">
           <ul class="footer-menu list-unstyled mb-0 d-flex flex-column gap-2">
-            <li><a class="link-hover fs-5 text-white" href="#!">Instagram</a></li>
-            <li><a class="link-hover fs-5 text-white" href="#!">LinkedIn</a></li>
+ <li><a target="_blank" class="link-hover fs-5 text-white" href="https://www.instagram.com/seeshark.llc/">Instagram</a></li>
+            <li><a target="_blank" class="link-hover fs-5 text-white" href="https://www.linkedin.com/in/sanan-nasrullayev-6884b9300/">LinkedIn</a></li>
           </ul>
         </div>
       </div>
