--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../assets/libs/owl.carousel/dist/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="../assets/libs/aos-master/dist/aos.css">
   <link rel="stylesheet" href="../assets/css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="../appJs/contact.js" defer></script>
 </head>
 
@@ -54,7 +55,7 @@
                       <a href="index.html" class="header-link hstack gap-2 fs-7 fw-bold text-dark"><img
                           src="../assets/images/svgs/secondary-leaf.svg" alt="" width="20" height="20"
                           class="img-fluid animate-spin">Services</a>
-                    </li>
+       </li>
                     <li class="header-item">
                       <a href="contact.html" class="header-link hstack gap-2 fs-7 fw-bold text-dark"><img
                           src="../assets/images/svgs/secondary-leaf.svg" alt="" width="20" height="20"
@@ -64,7 +65,7 @@
                 </div>
                 <div>
                   <a class="text-dark">+994 51 424 48 07</a>
-                  <a style="font-size: 12px;"  class="fs-8 text-dark fw-bold" >seeshark.llc@gmail.com</a>
+                  <a  href="https://mail.google.com/" target="_blank" style="font-size: 12px;"  class="fs-8 text-dark fw-bold" >seeshark.llc@gmail.com</a>
                 </div>
               </div>
             </ul>
@@ -423,15 +424,12 @@
                   <img src="../assets/images/team/TeamCode.png" alt="team-img" class="img-fluid w-100">
                   <div class="meet-team-overlay p-7 d-flex flex-column justify-content-end">
                     <ul class="social list-unstyled mb-0 hstack gap-2 justify-content-end">
-                      <li><a href="https://www.instagram.com/senaanw/?next=%2F&hl=en"
-                          class="btn bg-white p-2 round-45 rounded-circle hstack justify-content-center"><img
-                            src="../assets/images/svgs/instagram-brands-solid-full.svg" alt="Instagram"></a></li>
-                      <li><a href="https://github.com/Sanaanw"
-                          class="btn bg-white p-2 round-45 rounded-circle hstack justify-content-center"><img
-                            src="../assets/images/svgs/github-brands-solid-full.svg" alt="GitHub"></a></li>
-                      <li><a href="https://www.linkedin.com/in/sanan-nasrullayev-6884b9300/"
-                          class="btn bg-white p-2 round-45 rounded-circle hstack justify-content-center"><img
-                            src="../assets/images/svgs/icon-linkedin.svg" alt="Linkedin"></a></li>
+                      <li><a target="_blank" href="https://www.instagram.com/senaanw/?next=%2F&hl=en"
+                          class="btn bg-white p-2 round-45 rounded-circle hstack justify-content-center"><i class="fa-brands fa-instagram"></i></a></li>
+                      <li><a target="_blank" href="https://github.com/Sanaanw"
+                          class="btn bg-white p-2 round-45 rounded-circle hstack justify-content-center"><i class="fa-brands fa-github"></i></a></li>
+                      <li><a target="_blank" href="https://www.linkedin.com/in/sanan-nasrullayev-6884b9300/"
+                          class="btn bg-white p-2 round-45 rounded-circle hstack justify-content-center"><i class="fa-brands fa-linkedin-in"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -611,7 +609,7 @@
           <div class="d-flex flex-column gap-8 pe-xl-5">
             <h2 class="mb-0 text-white">Build something together?</h2>
             <div class="d-flex flex-column gap-2">
-              <a target="_blank" class="link-hover hstack gap-3 text-white fs-5">
+              <a  href="https://mail.google.com/" target="_blank" class="link-hover hstack gap-3 text-white fs-5">
                 <iconify-icon icon="lucide:arrow-up-right" class="fs-7 text-primary"></iconify-icon>
                 seeshark.llc@gmail.com
               </a>
@@ -626,8 +624,8 @@
         </div>  
         <div class="col-md-4 col-xl-2 mb-8 mb-xl-0">
           <ul class="footer-menu list-unstyled mb-0 d-flex flex-column gap-2">
-            <li><a class="link-hover fs-5 text-white" href="https://www.instagram.com/seeshark.llc/">Instagram</a></li>
-            <li><a class="link-hover fs-5 text-white" href="https://www.linkedin.com/in/sanan-nasrullayev-6884b9300/">LinkedIn</a></li>
+            <li><a target="_blank" class="link-hover fs-5 text-white" href="https://www.instagram.com/seeshark.llc/">Instagram</a></li>
+            <li><a target="_blank" class="link-hover fs-5 text-white" href="https://www.linkedin.com/in/sanan-nasrullayev-6884b9300/">LinkedIn</a></li>
           </ul>
         </div>
       </div>
